--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "db:up": "drizzle-kit up"
   },
   "dependencies": {
+    "@ai-sdk/fal": "^0.0.6",
     "@ai-sdk/fireworks": "^0.1.8",
+    "@ai-sdk/groq": "^1.1.11",
     "@ai-sdk/openai": "1.1.9",
+    "@clerk/nextjs": "^6.12.1",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/state": "^6.5.0",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.35.3",
+    "@prisma/client": "6.4.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -97,6 +101,7 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "^8",
+    "prisma": "6.4.1",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
